7_Observability-Stack/alloy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  namespace: observability
spec:
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway
  hostnames:
    - alloy.192.168.0.110.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alloy
          port: 12345
