7_Observability-Stack/jaeger-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: observability
spec:
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway
  hostnames:
    - jaeger.192.168.0.110.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger
          port: 16686
